[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/selector.png" type="Texture" id=2]
[ext_resource path="res://assets/ring.png" type="Texture" id=3]
[ext_resource path="res://scenes/FloatTextSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/background.png" type="Texture" id=5]
[ext_resource path="res://assets/flower_001.png" type="Texture" id=6]
[ext_resource path="res://assets/flower_006.png" type="Texture" id=7]
[ext_resource path="res://assets/flower_002.png" type="Texture" id=8]
[ext_resource path="res://assets/flower_004.png" type="Texture" id=9]
[ext_resource path="res://assets/heart_001.png" type="Texture" id=10]
[ext_resource path="res://assets/flower_005.png" type="Texture" id=11]
[ext_resource path="res://assets/flower_003.png" type="Texture" id=12]
[ext_resource path="res://assets/heart_002.png" type="Texture" id=13]
[ext_resource path="res://assets/heart_003.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 180, 320 )
texture = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_left = -179.0
margin_top = -102.0
margin_right = 118.0
margin_bottom = 186.0
color = Color( 0, 0, 0, 0.113725 )

[node name="Doodles" type="AnimatedSprite" parent="Background"]
position = Vector2( -144, 205 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Background/Doodles"]
position = Vector2( 45, -1 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="AnimatedSprite5" type="AnimatedSprite" parent="Background/Doodles"]
position = Vector2( 238, 0 )
frames = SubResource( 2 )
frame = 1
playing = true
flip_h = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Background/Doodles"]
position = Vector2( 91, -1 )
frames = SubResource( 3 )
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Background/Doodles"]
position = Vector2( 139, -1 )
frames = SubResource( 4 )
frame = 1
playing = true
flip_h = true

[node name="AnimatedSprite4" type="AnimatedSprite" parent="Background/Doodles"]
position = Vector2( 189, -2 )
frames = SubResource( 5 )
playing = true

[node name="Heart" type="AnimatedSprite" parent="Background/Doodles"]
position = Vector2( 294, -13 )
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
playing = true

[node name="IncomingBlockColor" type="ColorRect" parent="."]
margin_left = 153.0
margin_top = 101.0
margin_right = 297.0
margin_bottom = 137.0
color = Color( 0.321569, 0.0509804, 0.541176, 1 )

[node name="BlockProgress" type="TextureProgress" parent="."]
margin_left = 209.0
margin_top = 101.0
margin_right = 273.0
margin_bottom = 165.0
rect_scale = Vector2( 0.5, 0.5 )
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
fill_mode = 4
tint_under = Color( 0.376471, 0.376471, 0.376471, 1 )
tint_progress = Color( 0.921569, 0.921569, 0.921569, 1 )

[node name="Tween1" type="Tween" parent="BlockProgress"]

[node name="Tween2" type="Tween" parent="BlockProgress"]

[node name="BlockSpawn4" type="Position2D" parent="."]
position = Vector2( 171, 237 )

[node name="BlockSpawn5" type="Position2D" parent="."]
position = Vector2( 207, 237 )

[node name="BlockSpawn6" type="Position2D" parent="."]
position = Vector2( 243, 237 )

[node name="BlockSpawn7" type="Position2D" parent="."]
position = Vector2( 279, 237 )

[node name="Selector" type="Sprite" parent="."]
modulate = Color( 0, 0.235294, 0.737255, 1 )
position = Vector2( 171, 237 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Blocks" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Column4" type="TextureButton" parent="."]
visible = false
margin_left = 153.0
margin_top = 219.0
margin_right = 189.0
margin_bottom = 507.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column5" type="TextureButton" parent="."]
margin_left = 189.0
margin_top = 219.0
margin_right = 225.0
margin_bottom = 507.0

[node name="Column6" type="TextureButton" parent="."]
margin_left = 225.0
margin_top = 219.0
margin_right = 261.0
margin_bottom = 507.0

[node name="Column7" type="TextureButton" parent="."]
margin_left = 261.0
margin_top = 219.0
margin_right = 297.0
margin_bottom = 507.0

[node name="BlockLandTimer" type="Timer" parent="."]
one_shot = true

[node name="ComboRecheckTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="EnemySpawn5" type="Position2D" parent="."]
position = Vector2( 27, 415 )

[node name="EnemySpawn6" type="Position2D" parent="."]
position = Vector2( 27, 451 )

[node name="EnemySpawn7" type="Position2D" parent="."]
position = Vector2( 27, 487 )

[node name="EnemyAttackTimer" type="Timer" parent="."]
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="VerticalDividers" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Line1" type="ColorRect" parent="HUD/VerticalDividers"]
margin_left = 153.0
margin_top = 219.0
margin_right = 154.0
margin_bottom = 506.0
color = Color( 0, 0, 0, 1 )

[node name="Line2" type="ColorRect" parent="HUD/VerticalDividers"]
margin_left = 189.0
margin_top = 219.0
margin_right = 190.0
margin_bottom = 506.0
color = Color( 0, 0, 0, 1 )

[node name="Line3" type="ColorRect" parent="HUD/VerticalDividers"]
margin_left = 225.0
margin_top = 219.0
margin_right = 226.0
margin_bottom = 506.0
color = Color( 0, 0, 0, 1 )

[node name="Line4" type="ColorRect" parent="HUD/VerticalDividers"]
margin_left = 261.0
margin_top = 219.0
margin_right = 262.0
margin_bottom = 506.0
color = Color( 0, 0, 0, 1 )

[node name="Line5" type="ColorRect" parent="HUD/VerticalDividers"]
margin_left = 297.0
margin_top = 219.0
margin_right = 298.0
margin_bottom = 506.0
color = Color( 0, 0, 0, 1 )

[node name="HorizontalDividers" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Line1" type="ColorRect" parent="HUD/HorizontalDividers"]
margin_top = 505.0
margin_right = 297.0
margin_bottom = 506.0
color = Color( 0, 0, 0, 1 )

[node name="Line2" type="ColorRect" parent="HUD/HorizontalDividers"]
margin_top = 469.0
margin_right = 297.0
margin_bottom = 470.0
color = Color( 0, 0, 0, 1 )

[node name="Line3" type="ColorRect" parent="HUD/HorizontalDividers"]
margin_top = 433.0
margin_right = 297.0
margin_bottom = 434.0
color = Color( 0, 0, 0, 1 )

[node name="Line4" type="ColorRect" parent="HUD/HorizontalDividers"]
margin_top = 397.0
margin_right = 297.0
margin_bottom = 398.0
color = Color( 0, 0, 0, 1 )

[node name="HP" type="Label" parent="HUD"]
margin_left = 312.0
margin_top = 511.0
margin_right = 352.0
margin_bottom = 525.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "HP: 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloatTextSpawner" parent="HUD/HP" instance=ExtResource( 4 )]

[connection signal="tween_all_completed" from="BlockProgress/Tween1" to="." method="_on_BlockProgressTween1_tween_all_completed"]
[connection signal="tween_all_completed" from="BlockProgress/Tween2" to="." method="_on_BlockProgressTween2_tween_all_completed"]
[connection signal="pressed" from="Column4" to="." method="_on_Column4_pressed"]
[connection signal="pressed" from="Column5" to="." method="_on_Column5_pressed"]
[connection signal="pressed" from="Column6" to="." method="_on_Column6_pressed"]
[connection signal="pressed" from="Column7" to="." method="_on_Column7_pressed"]
[connection signal="timeout" from="BlockLandTimer" to="." method="_on_BlockLandTimer_timeout"]
[connection signal="timeout" from="ComboRecheckTimer" to="." method="_on_ComboRecheckTimer_timeout"]
[connection signal="timeout" from="EnemyAttackTimer" to="." method="_on_EnemyAttackTimer_timeout"]
